# jsonvc

./: LICENSE.txt  README.md  pyproject.toml
examples/: first.json  first_example.py  second.json  third.json
src/jsontools/: __about__.py  checksum.py  cmd.py  custom_exceptions.py  document_archive.py  filepath_utils.py  ipfs_storage.py  ipfs_storage_utils.py  jsonpatch_ext.py  storage.py  storage_utils.py  version_control.py
src/jsontools/json/: generation.py  models.py  schemas.py
src/jsontools/json/base_models/: __init__.py  ext_json_patch_base.py  json_document_archive_base.py  json_graph_node_base.py
src/jsontools/json/schemas/: schema_ext_json_patch_base_v0_0_1.json  schema_json_document_archive_base_v0_0_1.json  schema_json_graph_node_base_v0_0_1.json
src/jsonvc/: checksum.py  cmd.py  ipfs_storage.py  ipfs_storage_utils.py  jsonpatch_ext.py  storage_utils.py  version_control.py
src/jsonvc/json/: models.py
tests/: __init__.py  test_basic_operations.py
